# NoFFmpeg

./: readme.md
app/: build.gradle
app/src/androidTest/java/com/slava/noffmpeg/: EncodeDecodeTest.java  ExampleInstrumentedTest.java  ImageReaderDecoderTest.java  YUVTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gifdec.c  gifdec.h  yuv2rgb.c
app/src/main/java/com/slava/noffmpeg/: MainActivity.java  VideoPictureFileChooser.java
app/src/main/java/com/slava/noffmpeg/bitmapprovider/: BitmapProvider.java  GifBitmapProvider.java  GifJniProvider.java  GifProvider.java  ImageBitmapProvider.java  ImageProvider.java
app/src/main/java/com/slava/noffmpeg/frameproviders/: EncodedFrame.java  FrameProvider.java  FramesProvider.java  GifFramesProvider.java  ImageFrameProvider.java  ImageFramesProvider.java  SkipFrameProvider.java  VideoFramesProvider.java
app/src/main/java/com/slava/noffmpeg/mediaworkers/: BufferCallback.java  Decoder.java  EncodedFrame.java  Encoder.java  ImageCallback.java  PauseMaker.java  ProgressCallback.java  Size.java  SurfaceCallback.java  VideoProcessor.java
app/src/main/jni/: yuv2rgb.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/slava/noffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
